# opengl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  OGL.sln  todo.txt
OGL/: .gitattributes  .gitignore  OGL.vcxproj  OGL.vcxproj.filters  imgui.ini  todo.txt
OGL/res/shaders/: Basic.shader
OGL/src/: Renderer.cpp  Renderer.h
OGL/src/application/: Application.cpp
OGL/src/buffer/index/: IndexBuffer.cpp
OGL/src/buffer/vertex/: VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OGL/src/core/: Renderer.cpp  Renderer.h
OGL/src/core/application/: Application.cpp
OGL/src/core/buffer/index/: IndexBuffer.h
OGL/src/core/buffer/vertex/: VertexBuffer.cpp  VertexBuffer.h
OGL/src/core/camera/: Camera.cpp
OGL/src/core/renderer/: Renderer.cpp  Renderer.h
OGL/src/core/shader/: Shader.cpp
OGL/src/core/texture/: Texture.cpp  Texture.h
OGL/src/shader/: Shader.cpp  Shader.h
OGL/src/texture/: Texture.cpp  Texture.h
libs/glew-2.1.0/: CMakeLists.txt  glew.pc
res/shaders/: Basic.shader
src/: pch.h
src/core/application/: Application.cpp  Application.h  Window.cpp  Window.h
src/core/buffer/index/: IndexBuffer.cpp  IndexBuffer.h
src/core/buffer/vertex/: VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/core/camera/: Camera.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
src/core/entity/: Vertex.h
src/core/input/: Input.h
src/core/renderer/: Renderer.cpp  Renderer.h
src/core/shader/: Shader.cpp  Shader.h
src/core/texture/: Texture.cpp  Texture.h
src/platform/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
src/playground/: Playground.cpp
src/sandbox/: Sandbox.cpp
